--- a/framework/gwt/src/cc/alcina/framework/gwt/client/tour/tour.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/tour/tour.css
@@ -95,7 +95,7 @@
 	margin-right: 0.5em;
 	padding: 3px 6px;
 	font-size: 11px;
-	background: #78a3b6 url(_pix/bg-button-blue.gif) left top repeat;
+	background: #78a3b6 url(/_pix/bg-button-blue.gif) left top repeat;
 	color: white;
 }
 
