Login module point

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/lux/res/lux.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/lux/res/lux.css
@@ -1,1 +1,7 @@
-/*placeholder - application-themed*/
+/*most styles - application-themed*/
+.lux-screen-center{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	min-height:100vh;
+}
