--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/gwt-standard.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/gwt-standard.css
@@ -51,7 +51,7 @@ a, a:visited, a:hover {
   font-size: small;
   cursor: pointer;
   cursor: hand;
-  background: url("images/hborder.png") repeat-x 0px -27px;
+  background: url("/images/hborder.png") repeat-x 0px -27px;
   border: 1px outset #ccc;
 }
 .gwt-Button:active {
@@ -78,11 +78,11 @@ a, a:visited, a:hover {
 }
 .gwt-DecoratorPanel .topCenter,
 .gwt-DecoratorPanel .bottomCenter {
-  background: url(images/hborder.png) repeat-x;
+  background: url(/images/hborder.png) repeat-x;
 }
 .gwt-DecoratorPanel .middleLeft,
 .gwt-DecoratorPanel .middleRight {
-  background: url(images/vborder.png) repeat-y;
+  background: url(/images/vborder.png) repeat-y;
 }
 .gwt-DecoratorPanel .topLeftInner,
 .gwt-DecoratorPanel .topRightInner,
@@ -93,16 +93,16 @@ a, a:visited, a:hover {
   zoom: 1;
 }
 .gwt-DecoratorPanel .topLeft {
-  background: url(images/corner.png) no-repeat 0px 0px;
+  background: url(/images/corner.png) no-repeat 0px 0px;
 }
 .gwt-DecoratorPanel .topRight {
-  background: url(images/corner.png) no-repeat -5px 0px;
+  background: url(/images/corner.png) no-repeat -5px 0px;
 }
 .gwt-DecoratorPanel .bottomLeft {
-  background: url(images/corner.png) no-repeat 0px -5px;
+  background: url(/images/corner.png) no-repeat 0px -5px;
 }
 .gwt-DecoratorPanel .bottomRight {
-  background: url(images/corner.png) no-repeat -5px -5px;
+  background: url(/images/corner.png) no-repeat -5px -5px;
 }
 * html .gwt-DecoratorPanel .topLeftInner,
 * html .gwt-DecoratorPanel .topRightInner,
@@ -114,7 +114,7 @@ a, a:visited, a:hover {
 }
 
 .gwt-DialogBox .Caption {
-  background: #e3e8f3 url(images/hborder.png) repeat-x 0px -2003px;
+  background: #e3e8f3 url(/images/hborder.png) repeat-x 0px -2003px;
   padding: 4px 4px 4px 8px;
   cursor: default;
   border-bottom: 1px solid #bbbbbb;
@@ -127,14 +127,14 @@ a, a:visited, a:hover {
   background: white;
 }
 .gwt-DialogBox .dialogBottomCenter {
-  background: url(images/hborder.png) repeat-x 0px -4px;
+  background: url(/images/hborder.png) repeat-x 0px -4px;
   
 }
 .gwt-DialogBox .dialogMiddleLeft {
-  background: url(images/vborder.png) repeat-y;
+  background: url(/images/vborder.png) repeat-y;
 }
 .gwt-DialogBox .dialogMiddleRight {
-  background: url(images/vborder.png) repeat-y -4px 0px;
+  background: url(/images/vborder.png) repeat-y -4px 0px;
   
 }
 .gwt-DialogBox .dialogTopLeftInner {
@@ -156,19 +156,19 @@ a, a:visited, a:hover {
   zoom: 1;
 }
 .gwt-DialogBox .dialogTopLeft {
-  background: url(images/corner.png) no-repeat -13px 0px;
+  background: url(/images/corner.png) no-repeat -13px 0px;
   
 }
 .gwt-DialogBox .dialogTopRight {
-  background: url(images/corner.png) no-repeat -18px 0px;
+  background: url(/images/corner.png) no-repeat -18px 0px;
   
 }
 .gwt-DialogBox .dialogBottomLeft {
-  background: url(images/corner.png) no-repeat 0px -15px;
+  background: url(/images/corner.png) no-repeat 0px -15px;
   
 }
 .gwt-DialogBox .dialogBottomRight {
-  background: url(images/corner.png) no-repeat -5px -15px;
+  background: url(/images/corner.png) no-repeat -5px -15px;
   
 }
 * html .gwt-DialogBox .dialogTopLeftInner {
@@ -225,7 +225,7 @@ a, a:visited, a:hover {
 .gwt-HorizontalSplitPanel .hsplitter {
   cursor: move;
   border: 0px;
-  background: #91c0ef url(images/vborder.png) repeat-y;
+  background: #91c0ef url(/images/vborder.png) repeat-y;
   line-height: 0px;
 }
 .gwt-VerticalSplitPanel {
@@ -233,7 +233,7 @@ a, a:visited, a:hover {
 .gwt-VerticalSplitPanel .vsplitter {
   cursor: move;
   border: 0px;
-  background: #91c0ef url(images/hborder.png) repeat-x;
+  background: #91c0ef url(/images/hborder.png) repeat-x;
   line-height: 0px;
 }
 
@@ -266,7 +266,7 @@ a, a:visited, a:hover {
   color: #c0c0c0;
 }
 .gwt-MenuBar-horizontal {
-  background: #e3e8f3 url(images/hborder.png) repeat-x 0px -2003px;
+  background: #e3e8f3 url(/images/hborder.png) repeat-x 0px -2003px;
   border: 1px solid #BBBBBB;
 }
 .gwt-MenuBar-horizontal .gwt-MenuItem {
@@ -320,18 +320,18 @@ a, a:visited, a:hover {
   margin: 0px 0px 0px 3px;
 }
 .gwt-MenuBarPopup .menuPopupTopCenter {
-  background: url(images/hborder.png) 0px -12px repeat-x;
+  background: url(/images/hborder.png) 0px -12px repeat-x;
 }
 .gwt-MenuBarPopup .menuPopupBottomCenter {
-  background: url(images/hborder.png) 0px -13px repeat-x;
+  background: url(/images/hborder.png) 0px -13px repeat-x;
   
 }
 .gwt-MenuBarPopup .menuPopupMiddleLeft {
-  background: url(images/vborder.png) -12px 0px repeat-y;
+  background: url(/images/vborder.png) -12px 0px repeat-y;
   
 }
 .gwt-MenuBarPopup .menuPopupMiddleRight {
-  background: url(images/vborder.png) -13px 0px repeat-y;
+  background: url(/images/vborder.png) -13px 0px repeat-y;
   
 }
 .gwt-MenuBarPopup .menuPopupTopLeftInner {
@@ -355,19 +355,19 @@ a, a:visited, a:hover {
   zoom: 1;
 }
 .gwt-MenuBarPopup .menuPopupTopLeft {
-  background: url(images/corner.png) no-repeat 0px -36px;
+  background: url(/images/corner.png) no-repeat 0px -36px;
   
 }
 .gwt-MenuBarPopup .menuPopupTopRight {
-  background: url(images/corner.png) no-repeat -5px -36px;
+  background: url(/images/corner.png) no-repeat -5px -36px;
   
 }
 .gwt-MenuBarPopup .menuPopupBottomLeft {
-  background: url(images/corner.png) no-repeat 0px -41px;
+  background: url(/images/corner.png) no-repeat 0px -41px;
   
 }
 .gwt-MenuBarPopup .menuPopupBottomRight {
-  background: url(images/corner.png) no-repeat -5px -41px;
+  background: url(/images/corner.png) no-repeat -5px -41px;
   
 }
 * html .gwt-MenuBarPopup .menuPopupTopLeftInner {
@@ -411,17 +411,17 @@ a, a:visited, a:hover {
   background: #d0e4f6;
 }
 .gwt-DecoratedPopupPanel .popupTopCenter {
-  background: url(images/hborder.png) repeat-x;
+  background: url(/images/hborder.png) repeat-x;
 }
 .gwt-DecoratedPopupPanel .popupBottomCenter {
-  background: url(images/hborder.png) repeat-x 0px -4px;
+  background: url(/images/hborder.png) repeat-x 0px -4px;
   
 }
 .gwt-DecoratedPopupPanel .popupMiddleLeft {
-  background: url(images/vborder.png) repeat-y;
+  background: url(/images/vborder.png) repeat-y;
 }
 .gwt-DecoratedPopupPanel .popupMiddleRight {
-  background: url(images/vborder.png) repeat-y -4px 0px;
+  background: url(/images/vborder.png) repeat-y -4px 0px;
   
 }
 .gwt-DecoratedPopupPanel .popupTopLeftInner {
@@ -445,19 +445,19 @@ a, a:visited, a:hover {
   zoom: 1;
 }
 .gwt-DecoratedPopupPanel .popupTopLeft {
-  background: url(images/corner.png) no-repeat 0px -10px;
+  background: url(/images/corner.png) no-repeat 0px -10px;
   
 }
 .gwt-DecoratedPopupPanel .popupTopRight {
-  background: url(images/corner.png) no-repeat -5px -10px;
+  background: url(/images/corner.png) no-repeat -5px -10px;
   
 }
 .gwt-DecoratedPopupPanel .popupBottomLeft {
-  background: url(images/corner.png) no-repeat 0px -15px;
+  background: url(/images/corner.png) no-repeat 0px -15px;
   
 }
 .gwt-DecoratedPopupPanel .popupBottomRight {
-  background: url(images/corner.png) no-repeat -5px -15px;
+  background: url(/images/corner.png) no-repeat -5px -15px;
   
 }
 * html .gwt-DecoratedPopupPanel .popupTopLeftInner {
@@ -495,7 +495,7 @@ a, a:visited, a:hover {
 .gwt-PushButton-down-disabled {
   margin: 0;
   text-decoration: none;
-  background: url("images/hborder.png") repeat-x 0px -27px;
+  background: url("/images/hborder.png") repeat-x 0px -27px;
 }
 .gwt-PushButton-up,
 .gwt-PushButton-up-hovering,
@@ -556,7 +556,7 @@ a, a:visited, a:hover {
   border: 0px;
 }
 .gwt-RichTextToolbar {
-  background: #e3e8f3 url(images/hborder.png) repeat-x 0px -2003px;
+  background: #e3e8f3 url(/images/hborder.png) repeat-x 0px -2003px;
   border-bottom: 1px solid #BBBBBB;
   padding: 3px;
   margin: 0px;
@@ -621,7 +621,7 @@ a, a:visited, a:hover {
   padding: 3px;
   border: 1px solid #bbbbbb;
   border-bottom: 0px;
-  background: #d3def6 url(images/hborder.png) repeat-x 0px -989px;
+  background: #d3def6 url(/images/hborder.png) repeat-x 0px -989px;
 }
 .gwt-StackPanel .gwt-StackPanelContent {
   border: 1px solid #bbbbbb;
@@ -651,12 +651,12 @@ a, a:visited, a:hover {
 }
 .gwt-DecoratedStackPanel .stackItemTopLeft {
   border-left: 1px solid #bbbbbb;
-  background: #d3def6 url(images/corner.png) no-repeat 0px -49px;
+  background: #d3def6 url(/images/corner.png) no-repeat 0px -49px;
   
 }
 .gwt-DecoratedStackPanel .stackItemTopRight {
   border-right: 1px solid #bbbbbb;
-  background: #d3def6 url(images/corner.png) no-repeat -6px -49px;
+  background: #d3def6 url(/images/corner.png) no-repeat -6px -49px;
   
 }
 .gwt-DecoratedStackPanel .stackItemTopLeftInner,
@@ -671,10 +671,10 @@ a, a:visited, a:hover {
   overflow: hidden;
 }
 .gwt-DecoratedStackPanel .stackItemTopCenter {
-  background: url(images/hborder.png) 0px -21px repeat-x;
+  background: url(/images/hborder.png) 0px -21px repeat-x;
 }
 .gwt-DecoratedStackPanel .stackItemMiddleLeft {
-  background: #d3def6 url(images/hborder.png) repeat-x 0px -989px;
+  background: #d3def6 url(/images/hborder.png) repeat-x 0px -989px;
   border-left: 1px solid #bbbbbb;
 }
 .gwt-DecoratedStackPanel .stackItemMiddleLeftInner,
@@ -683,13 +683,13 @@ a, a:visited, a:hover {
   height: 1px;
 }
 .gwt-DecoratedStackPanel .stackItemMiddleRight {
-  background: #d3def6 url(images/hborder.png) repeat-x 0px -989px;
+  background: #d3def6 url(/images/hborder.png) repeat-x 0px -989px;
   border-right: 1px solid #bbbbbb;
 }
 .gwt-DecoratedStackPanel .stackItemMiddleCenter {
   font-weight: bold;
   font-size: 1.3em;
-  background: #d3def6 url(images/hborder.png) repeat-x 0px -989px;
+  background: #d3def6 url(/images/hborder.png) repeat-x 0px -989px;
 }
 .gwt-DecoratedStackPanel .gwt-StackPanelItem-first .stackItemTopRight,
 .gwt-DecoratedStackPanel .gwt-StackPanelItem-first .stackItemTopLeft {
@@ -719,17 +719,17 @@ a, a:visited, a:hover {
   background: white;
 }
 .gwt-SuggestBoxPopup .suggestPopupTopCenter {
-  background: url(images/hborder.png) repeat-x;
+  background: url(/images/hborder.png) repeat-x;
 }
 .gwt-SuggestBoxPopup .suggestPopupBottomCenter {
-  background: url(images/hborder.png) repeat-x 0px -4px;
+  background: url(/images/hborder.png) repeat-x 0px -4px;
   
 }
 .gwt-SuggestBoxPopup .suggestPopupMiddleLeft {
-  background: url(images/vborder.png) repeat-y;
+  background: url(/images/vborder.png) repeat-y;
 }
 .gwt-SuggestBoxPopup .suggestPopupMiddleRight {
-  background: url(images/vborder.png) repeat-y -4px 0px;
+  background: url(/images/vborder.png) repeat-y -4px 0px;
   
 }
 .gwt-SuggestBoxPopup .suggestPopupTopLeftInner {
@@ -753,19 +753,19 @@ a, a:visited, a:hover {
   zoom: 1;
 }
 .gwt-SuggestBoxPopup .suggestPopupTopLeft {
-  background: url(images/corner.png) no-repeat 0px -23px;
+  background: url(/images/corner.png) no-repeat 0px -23px;
   
 }
 .gwt-SuggestBoxPopup .suggestPopupTopRight {
-  background: url(images/corner.png) no-repeat -5px -23px;
+  background: url(/images/corner.png) no-repeat -5px -23px;
   
 }
 .gwt-SuggestBoxPopup .suggestPopupBottomLeft {
-  background: url(images/corner.png) no-repeat 0px -28px;
+  background: url(/images/corner.png) no-repeat 0px -28px;
   
 }
 .gwt-SuggestBoxPopup .suggestPopupBottomRight {
-  background: url(images/corner.png) no-repeat -5px -28px;
+  background: url(/images/corner.png) no-repeat -5px -28px;
   
 }
 * html .gwt-SuggestBoxPopup .suggestPopupTopLeftInner {
@@ -850,11 +850,11 @@ a, a:visited, a:hover {
   height: 6px;
 }
 .gwt-DecoratedTabBar .tabTopLeft {
-  background: url(images/corner.png) no-repeat 0px -55px;
+  background: url(/images/corner.png) no-repeat 0px -55px;
   
 }
 .gwt-DecoratedTabBar .tabTopRight {
-  background: url(images/corner.png) no-repeat -6px -55px;
+  background: url(/images/corner.png) no-repeat -6px -55px;
   
 }
 * html .gwt-DecoratedTabBar .tabTopLeftInner,
@@ -927,7 +927,7 @@ a, a:visited, a:hover {
 .gwt-ToggleButton-down-disabled {
   margin: 0;
   text-decoration: none;
-  background: url("images/hborder.png") repeat-x 0px -27px;
+  background: url("/images/hborder.png") repeat-x 0px -27px;
 }
 .gwt-ToggleButton-up,
 .gwt-ToggleButton-up-hovering,
@@ -987,7 +987,7 @@ a, a:visited, a:hover {
   cursor: pointer;
 }
 .gwt-Tree .gwt-TreeItem-selected {
-  background: #93c2f1 url(images/hborder.png) repeat-x 0px -1463px;
+  background: #93c2f1 url(/images/hborder.png) repeat-x 0px -1463px;
 }
 .gwt-TreeItem .gwt-RadioButton input,
 .gwt-TreeItem .gwt-CheckBox input {
@@ -1097,10 +1097,10 @@ td.datePickerYear {
   padding: 3px;
   border: 1px solid #bbbbbb;
   border-bottom: 0px;
-  background: #d3def6 url(images/hborder.png) repeat-x 0px -989px;
+  background: #d3def6 url(/images/hborder.png) repeat-x 0px -989px;
 }
 .gwt-StackLayoutPanel .gwt-StackLayoutPanelHeader-hovering {
-  background: #d3def6 url(images/hborder.png) repeat-x 0px -1464px;
+  background: #d3def6 url(/images/hborder.png) repeat-x 0px -1464px;
 }
 .gwt-StackLayoutPanel .gwt-StackLayoutPanelContent {
   border: 1px solid #bbbbbb;
@@ -1141,11 +1141,11 @@ td.datePickerYear {
 }
 
 .gwt-SplitLayoutPanel-HDragger {
-  background: #d0e4f6 url(images/splitPanelThumb.png) center center no-repeat;
+  background: #d0e4f6 url(/images/splitPanelThumb.png) center center no-repeat;
   cursor: col-resize;
 }
 
 .gwt-SplitLayoutPanel-VDragger {
-  background: #d0e4f6 url(images/splitPanelThumb.png) center center no-repeat;
+  background: #d0e4f6 url(/images/splitPanelThumb.png) center center no-repeat;
   cursor: row-resize;
 }
