--- a/framework/gwt/src/cc/alcina/framework/gwt/client/entity/view/res/dataclient.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/entity/view/res/dataclient.css
@@ -1405,11 +1405,17 @@ table.gwittir-GridForm td.id div.nowrap {
 	padding-bottom: 0;
 	font-weight: bold;
 }
-.alcina-SelectorFrame .alcina-FilterHolder input[type='text']{
-	    width: calc(100% - 1px);
-	    border-width:0;
-	    border-bottom-width:1px;
+
+.alcina-SelectorFrame .alcina-FilterHolder input[type='text'] {
+	width: calc(100% - 1px);
+	border-width: 0;
+	border-bottom-width: 1px;
 }
-.alcina-SelectorFrame div.alcina-FilterHolder{
-	display:block;
+
+.alcina-SelectorFrame div.alcina-FilterHolder {
+	display: block;
+}
+
+.table-toolbar-holder {
+	position: relative;
 }
