--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/publication/publication-view.css
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/publication/publication-view.css
@@ -4,7 +4,7 @@ body {
 
 td {
 	vertical-align: top;
-	padding: 2px 3px 2px 6px;;
+	padding: 2px 3px 2px 6px;
 }
 .content{
 	width: calc(100vw - 200px);
